Activity transition using Intent

--- a/app/src/main/res/layout/activity_hamburgermenuactivity.xml
+++ b/app/src/main/res/layout/activity_hamburgermenuactivity.xml
@@ -9,7 +9,7 @@
     android:id="@+id/my_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".HamburgerMenuActivity"
     tools:ignore="HardcodedText">
 
     <LinearLayout
@@ -28,6 +28,7 @@
     <!-- this the navigation view which draws and shows the navigation drawer -->
     <!-- include the menu created in the menu folder -->
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/my_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
