--- a/app/src/main/res/layout/purchase_parkingpass.xml
+++ b/app/src/main/res/layout/purchase_parkingpass.xml
@@ -331,6 +331,22 @@
                         android:textStyle="bold" />
                 </TableRow>
             </TableLayout>
+            <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+
+                >
+            <Button
+                android:id="@+id/btn_home"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Back"
+                android:layout_marginRight="50px"
+                android:textAllCaps="false" />
             <Button
                 android:id="@+id/btn_purchase_pass"
 
@@ -339,6 +355,7 @@
                 android:layout_gravity="center"
                 android:text="Purchase"
                 android:textAllCaps="false" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
