--- a/app/src/main/res/layout/activity_hamburgermenuactivity.xml
+++ b/app/src/main/res/layout/activity_hamburgermenuactivity.xml
@@ -17,11 +17,12 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/tv_welcome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="128dp"
             android:gravity="center"
-            android:text="GeeksforGeeks"
+            android:text="Hello"
             android:textSize="18sp" />
     </LinearLayout>
 
