--- a/app/src/main/res/layout/activity_parkingselectionactivity.xml
+++ b/app/src/main/res/layout/activity_parkingselectionactivity.xml
@@ -247,6 +247,14 @@
 
 
             </LinearLayout>
+            <Button
+                android:id="@+id/back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="50px"
+                android:text="Back"
+                android:textAllCaps="false" />
         </LinearLayout>
 
     </LinearLayout>
