--- a/app/src/main/res/layout/activity_spotconfirmation.xml
+++ b/app/src/main/res/layout/activity_spotconfirmation.xml
@@ -47,5 +47,14 @@
             android:textColor="@color/black"
             android:textSize="34sp"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/home_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="50px"
+            android:text="Back"
+            android:textAllCaps="false" />
     </LinearLayout>
 </LinearLayout>
