--- a/app/src/main/res/layout/activity_parkingselectionactivity.xml
+++ b/app/src/main/res/layout/activity_parkingselectionactivity.xml
@@ -201,53 +201,300 @@
                 android:textColor="@color/black"/>
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/parent_linear_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageViewSpot1"
-                    android:layout_width="10mm"
-                    android:layout_height="10mm"
-                    android:layout_gravity="right"
-                    android:src="@drawable/occupied"
-                     />
+                <LinearLayout
+                    android:id="@+id/parent_linear_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageViewSpot2"
-                    android:layout_width="10mm"
-                    android:layout_height="10mm"
-                    android:src="@drawable/available"
-                     />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/imageViewSpot3"
-                    android:layout_width="10mm"
-                    android:layout_height="10mm"
-                    android:background="@color/black"
-                    android:src="@drawable/occupied"
-                     />
+                        <ImageView
+                            android:id="@+id/imageViewSpot1"
+                            android:layout_width="10mm"
+                            android:layout_height="10mm"
+                            android:src="@drawable/occupied"
+                            android:layout_gravity="left"/>
 
-                <ImageView
-                    android:id="@+id/imageViewSpot4"
-                    android:layout_width="10mm"
-                    android:layout_height="10mm"
-                    android:layout_gravity="right"
-                    android:src="@drawable/available"
-                     />
+                        <ImageView
+                            android:id="@+id/imageViewSpot2"
+                            android:layout_width="10mm"
+                            android:layout_height="10mm"
+                            android:src="@drawable/available"
+                            android:layout_gravity="center"/>
 
-                <ImageView
-                    android:id="@+id/imageViewSpot5"
-                    android:layout_width="10mm"
-                    android:layout_height="10mm"
-                    android:layout_gravity="right"
-                    android:src="@drawable/available"
-                    />
+                        <ImageView
+                            android:id="@+id/imageViewSpot3"
+                            android:layout_width="10mm"
+                            android:layout_height="10mm"
+                            android:src="@drawable/available"
+                            android:layout_gravity="right"/>
+                        <ImageView
+                            android:id="@+id/imageViewSpot4"
+                            android:layout_width="10mm"
+                            android:layout_height="10mm"
+                            android:src="@drawable/available" />
+                        <ImageView
+                            android:id="@+id/imageViewSpot5"
+                            android:layout_width="10mm"
+                            android:layout_height="10mm"
+                            android:src="@drawable/available" />
+                        <ImageView
+                            android:id="@+id/imageViewSpot6"
+                            android:layout_width="10mm"
+                            android:layout_height="10mm"
+                            android:src="@drawable/available" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/parent_linear_layout1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
 
-            </LinearLayout>
+                            <ImageView
+                                android:id="@+id/imageViewSpot7"
+                                android:layout_width="10mm"
+                                android:layout_height="10mm"
+                                android:src="@drawable/occupied"
+                                android:layout_gravity="left"/>
+
+                            <ImageView
+                                android:id="@+id/imageViewSpot8"
+                                android:layout_width="10mm"
+                                android:layout_height="10mm"
+                                android:src="@drawable/available"
+                                android:layout_gravity="center"
+                                android:visibility="invisible"/>
+
+                            <ImageView
+                                android:id="@+id/imageViewSpot9"
+                                android:layout_width="10mm"
+                                android:layout_height="10mm"
+                                android:src="@drawable/available"
+                                android:layout_gravity="right"
+                                android:visibility="invisible"/>
+                            <ImageView
+                                android:id="@+id/imageViewSpot10"
+                                android:layout_width="10mm"
+                                android:layout_height="10mm"
+                                android:src="@drawable/available"
+                                android:visibility="invisible"/>
+                            <ImageView
+                                android:id="@+id/imageViewSpot11"
+                                android:layout_width="10mm"
+                                android:layout_height="10mm"
+                                android:src="@drawable/available"
+                                android:visibility="invisible"/>
+                            <ImageView
+                                android:id="@+id/imageViewSpot12"
+                                android:layout_width="10mm"
+                                android:layout_height="10mm"
+                                android:src="@drawable/available" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/parent_linear_layout2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:id="@+id/imageViewSpot13"
+                                    android:layout_width="10mm"
+                                    android:layout_height="10mm"
+                                    android:src="@drawable/occupied"
+                                    android:layout_gravity="left"/>
+
+                                <ImageView
+                                    android:id="@+id/imageViewSpot14"
+                                    android:layout_width="10mm"
+                                    android:layout_height="10mm"
+                                    android:src="@drawable/available"
+                                    android:layout_gravity="center"
+                                    android:visibility="invisible"/>
+
+                                <ImageView
+                                    android:id="@+id/imageViewSpot15"
+                                    android:layout_width="10mm"
+                                    android:layout_height="10mm"
+                                    android:src="@drawable/available"
+                                    android:layout_gravity="right"
+                                    android:visibility="invisible"/>
+                                <ImageView
+                                    android:id="@+id/imageViewSpot16"
+                                    android:layout_width="10mm"
+                                    android:layout_height="10mm"
+                                    android:src="@drawable/available"
+                                    android:visibility="invisible"/>
+                                <ImageView
+                                    android:id="@+id/imageViewSpot17"
+                                    android:layout_width="10mm"
+                                    android:layout_height="10mm"
+                                    android:src="@drawable/available"
+                                    android:visibility="invisible"/>
+                                <ImageView
+                                    android:id="@+id/imageViewSpot18"
+                                    android:layout_width="10mm"
+                                    android:layout_height="10mm"
+                                    android:src="@drawable/available"
+                                    />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:id="@+id/parent_linear_layout3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content">
+
+                                    <ImageView
+                                        android:id="@+id/imageViewSpot19"
+                                        android:layout_width="10mm"
+                                        android:layout_height="10mm"
+                                        android:src="@drawable/occupied"
+                                        android:layout_gravity="left"/>
+
+                                    <ImageView
+                                        android:id="@+id/imageViewSpot20"
+                                        android:layout_width="10mm"
+                                        android:layout_height="10mm"
+                                        android:src="@drawable/available"
+                                        android:layout_gravity="center"
+                                        android:visibility="invisible"/>
+
+                                    <ImageView
+                                        android:id="@+id/imageViewSpot21"
+                                        android:layout_width="10mm"
+                                        android:layout_height="10mm"
+                                        android:src="@drawable/available"
+                                        android:layout_gravity="right"
+                                        android:visibility="invisible"/>
+                                    <ImageView
+                                        android:id="@+id/imageViewSpot22"
+                                        android:layout_width="10mm"
+                                        android:layout_height="10mm"
+                                        android:src="@drawable/available"
+                                        android:visibility="invisible"/>
+                                    <ImageView
+                                        android:id="@+id/imageViewSpot23"
+                                        android:layout_width="10mm"
+                                        android:layout_height="10mm"
+                                        android:src="@drawable/available"
+                                        android:visibility="invisible"/>
+                                    <ImageView
+                                        android:id="@+id/imageViewSpot24"
+                                        android:layout_width="10mm"
+                                        android:layout_height="10mm"
+                                        android:src="@drawable/available" />
+                                </LinearLayout>
+                                <LinearLayout
+                                    android:id="@+id/parent_linear_layout4"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content">
+
+                                        <ImageView
+                                            android:id="@+id/imageViewSpot25"
+                                            android:layout_width="10mm"
+                                            android:layout_height="10mm"
+                                            android:src="@drawable/occupied"
+                                            android:layout_gravity="left"/>
+
+                                        <ImageView
+                                            android:id="@+id/imageViewSpot26"
+                                            android:layout_width="10mm"
+                                            android:layout_height="10mm"
+                                            android:src="@drawable/available"
+                                            android:layout_gravity="center"
+                                            android:visibility="invisible"/>
+
+                                        <ImageView
+                                            android:id="@+id/imageViewSpot27"
+                                            android:layout_width="10mm"
+                                            android:layout_height="10mm"
+                                            android:src="@drawable/available"
+                                            android:layout_gravity="right"
+                                            android:visibility="invisible"/>
+                                        <ImageView
+                                            android:id="@+id/imageViewSpot28"
+                                            android:layout_width="10mm"
+                                            android:layout_height="10mm"
+                                            android:src="@drawable/available"
+                                            android:visibility="invisible"/>
+                                        <ImageView
+                                            android:id="@+id/imageViewSpot29"
+                                            android:layout_width="10mm"
+                                            android:layout_height="10mm"
+                                            android:src="@drawable/available"
+                                            android:visibility="invisible"/>
+                                        <ImageView
+                                            android:id="@+id/imageViewSpot30"
+                                            android:layout_width="10mm"
+                                            android:layout_height="10mm"
+                                            android:src="@drawable/available" />
+                                    </LinearLayout>
+                                    <LinearLayout
+                                        android:id="@+id/parent_linear_layout5"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="vertical">
+
+                                        <LinearLayout
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content">
+
+                                            <ImageView
+                                                android:id="@+id/imageViewSpot31"
+                                                android:layout_width="10mm"
+                                                android:layout_height="10mm"
+                                                android:src="@drawable/occupied"
+                                                android:layout_gravity="left"/>
+
+                                            <ImageView
+                                                android:id="@+id/imageViewSpot32"
+                                                android:layout_width="10mm"
+                                                android:layout_height="10mm"
+                                                android:src="@drawable/available"
+                                                android:layout_gravity="center"/>
+
+                                            <ImageView
+                                                android:id="@+id/imageViewSpot33"
+                                                android:layout_width="10mm"
+                                                android:layout_height="10mm"
+                                                android:src="@drawable/available"
+                                                android:layout_gravity="right"/>
+                                            <ImageView
+                                                android:id="@+id/imageViewSpot34"
+                                                android:layout_width="10mm"
+                                                android:layout_height="10mm"
+                                                android:src="@drawable/available" />
+                                            <ImageView
+                                                android:id="@+id/imageViewSpot35"
+                                                android:layout_width="10mm"
+                                                android:layout_height="10mm"
+                                                android:src="@drawable/available" />
+                                            <ImageView
+                                                android:id="@+id/imageViewSpot36"
+                                                android:layout_width="10mm"
+                                                android:layout_height="10mm"
+                                                android:src="@drawable/available" />
+                                        </LinearLayout>
             <Button
                 android:id="@+id/back_btn"
                 android:layout_width="wrap_content"
