--- a/app/src/main/res/layout/activity_parkingselectionactivity.xml
+++ b/app/src/main/res/layout/activity_parkingselectionactivity.xml
@@ -201,7 +201,7 @@
                 android:layout_height="match_parent">
             <Spinner
                 android:id="@+id/spinner1"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:background="@android:drawable/btn_dropdown"
                 android:spinnerMode="dropdown"
